--- a/frontend/src/components/BridgeList.css
+++ b/frontend/src/components/BridgeList.css
@@ -1,51 +1,50 @@
 .custom-table {
-    border-collapse: separate;
-    border-spacing: 0;
-    background-color: #f9f9f9;
-  }
-  
-  .custom-table th {
-    padding: 10px; /* Increase cell spacing */
-    text-align: left;
-    vertical-align: middle;
-    border: 1px solid #ddd;
-  }
+  border-collapse: separate;
+  border-spacing: 0;
+  background-color: #f9f9f9;
+}
 
-  .custom-table td {
-    padding: 5px; /* Increase cell spacing */
-    text-align: left;
-    vertical-align: middle;
-    border: 1px solid #ddd;
-  }
-  
-  .custom-table thead th {
-    background-color: #007bff; /* Header background color */
-    color: white; /* Header text color */
-    font-weight: bold;
-  }
-  
-  .custom-table tbody tr {
-    transition: transform 0.2s, background-color 0.2s;
-  }
-  
-  .custom-table tbody tr:hover {
-    background-color: #f1f1f1; /* Highlight row on hover */
-    transform: scale(1.01); /* Slightly enlarge the row */
-    cursor: pointer;
-  }
-  
-  .text-center {
-    text-align: center;
-  }
-  
-  .hover-row {
-    border-radius: 8px; /* Rounded edges for hover effect */
-  }
-  
-  .truncate-text {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 350px; /* Adjust the max-width as per your requirements */
-  }
-  
+.custom-table th {
+  padding: 5px; /* Reduced cell spacing */
+  text-align: left;
+  vertical-align: middle;
+  border: 1px solid #ddd;
+}
+
+.custom-table td {
+  padding: 3px; /* Reduced cell spacing */
+  text-align: left;
+  vertical-align: middle;
+  border: 1px solid #ddd;
+}
+
+.custom-table thead th {
+  background-color: #007bff; /* Header background color */
+  color: white; /* Header text color */
+  font-weight: bold;
+}
+
+.custom-table tbody tr {
+  transition: transform 0.2s, background-color 0.2s;
+}
+
+.custom-table tbody tr:hover {
+  background-color: #f1f1f1; /* Highlight row on hover */
+  transform: scale(1.01); /* Slightly enlarge the row */
+  cursor: pointer;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.hover-row {
+  border-radius: 8px; /* Rounded edges for hover effect */
+}
+
+.truncate-text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 350px; /* Adjust the max-width as per your requirements */
+}
